// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupedColumn using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-column"
      clip-path="url(#clip-path-test)"
    >
      <g>
        <rect
          class="column"
          height="0"
          style="fill: #99c1dc; opacity: 0.7;"
          width="23"
          x="2"
          y="100"
        />
        <rect
          class="column"
          height="0"
          style="fill: #fc998e; opacity: 0.7;"
          width="23"
          x="26"
          y="100"
        />
      </g>
      <g>
        <rect
          class="column"
          height="0"
          style="fill: #99c1dc; opacity: 0.7;"
          width="23"
          x="52"
          y="100"
        />
        <rect
          class="column"
          height="0"
          style="fill: #fc998e; opacity: 0.7;"
          width="23"
          x="76"
          y="100"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`GroupedColumn using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-column"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;

exports[`GroupedColumn using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-column"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;
